Tasks planned for future development.

--- a/ras/TODO
+++ b/ras/TODO
@@ -1,2 +1,6 @@
-endianness issues;
+store procedure size;
+remove symbols when clearing symbol table;
+fix CLI options handling;
+endianness;
+prelink;
 remove Perl dependency.
