--- a/README
+++ b/README
@@ -1,8 +1,18 @@
-ROSE stands for Real Object Stack Environment.
+ROSE stands for Real Object Slim Environment.
 This is virtual machine similar to JVM.
 
-Main issues are:
-	* short 2-byte instructions;
-	* 32-bit data;
+Key properties are:
+	* support for object-oriented programming;
+	* short addresses;
 	* modularity and late binding;
-	* safe code execution.
+	* static code verification;
+	* garbage collector;
+	* written in ANSI C;
+	* but optionally can use additional libraries.
+
+It is planned as a whole platform:
+	* VM itself (in development);
+	* assembler (done);
+	* high-level language compiler (planned);
+	* hardware-level kernel, which turns ROSE into OS
+	  (under consideration).
